Fixing Allsafe Spacing on Index, Portfolio

--- a/source/_patterns/02-organisms/sections/section-allsafe/section-allsafe.scss
+++ b/source/_patterns/02-organisms/sections/section-allsafe/section-allsafe.scss
@@ -19,7 +19,6 @@
         }
     }
     .section--default__image {
-        padding: 0 3rem !important;
         display: flex;
         align-items: center;
         margin-bottom: 3rem;
@@ -28,12 +27,12 @@
             width: 32rem;
             margin: 0 auto;
         }
+        @include media-breakpoint-up(md) {
+            padding: 0 3rem !important;
+        }
         @include media-breakpoint-up(lg) {
             margin-bottom: 0;
         }
-    }
-    >.row {
-        padding: 2rem 8rem 2rem 8rem !important;
     }
     &__title,
     p {
